force-app/main/default/objects/Config_Object_2__c/Config_Object_2__c.object-meta.xml
<CustomObject>
    <description>This is a Configuration Object used for testing Cross-Org Data Analyzer.</description>
    <label>Config Object-2</label>
    <nameField>
        <label>Config Object-2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Config Objects-2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>