force-app/main/default/objects/Config_Object_2__c/fields/Config_Field_2_1__c.field-meta.xml
<CustomField>
    <fullName>Config_Field_2_1__c</fullName>
    <label>Config Field 2.1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>