force-app/main/default/objects/Config_Object_2__c/fields/Config_Field_2_2__c.field-meta.xml
<CustomField>
    <fullName>Config_Field_2_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Config Field 2.2</label>
    <type>Checkbox</type>
</CustomField>